--- a/.github/workflows/run-bruno-test.yml
+++ b/.github/workflows/run-bruno-test.yml
@@ -7,6 +7,9 @@ on:
         description: 'Test Bru CLI (npm)'
         required: true
         default: 'true'
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -16,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version-file: 20
+          node-version: 20
         env:
           CLINICIAN_EMAIL: ${{ secrets.CLINICIAN_EMAIL }}
           CLINICIAN_PASSWORD: ${{ secrets.CLINICIAN_PASSWORD }}
