--- a/.github/workflows/run-bruno-test.yml
+++ b/.github/workflows/run-bruno-test.yml
@@ -30,10 +30,10 @@ jobs:
         run: |
           echo "CLINICIAN_EMAIL=${{ secrets.CLINICIAN_EMAIL }}" >> bruno-tests/UPLOAD-1010/.env
           echo "CLINICIAN_PASSWORD=${{ secrets.CLINICIAN_PASSWORD }}" >> bruno-tests/UPLOAD-1010/.env
+          ls bruno-tests/UPLOAD-1010/
       - name: Run tests
         run: |
           export $(grep -v '^#' bruno-tests/UPLOAD-1010/.env | xargs) && npm run test:ci
-
       - name: Publish Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure()
