--- a/.github/workflows/run-bruno-test.yml
+++ b/.github/workflows/run-bruno-test.yml
@@ -31,6 +31,7 @@ jobs:
           echo "CLINICIAN_EMAIL=${{ secrets.CLINICIAN_EMAIL }}" >> bruno-tests/UPLOAD-1010/.env
           echo "CLINICIAN_PASSWORD=${{ secrets.CLINICIAN_PASSWORD }}" >> bruno-tests/UPLOAD-1010/.env
           ls bruno-tests/UPLOAD-1010/
+          cat bruno-tests/UPLOAD-1010/.env
       - name: Run tests
         run: |
           export $(grep -v '^#' bruno-tests/UPLOAD-1010/.env | xargs) && npm run test:ci
